<resources>
    <string name="app_name">OFDApp</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="logout_fail_massage">Не удалось выполнить выход</string>
    <string name="startWork">Активация режима работы</string>
    <string name="info">Информация</string>
    <string name="info_about_app">Информация о приложении</string>
    <string name="menu">Меню</string>
    <string name="test_print_x_report">Тестовая печать x-отчета</string>
    <string name="test_print_z_report">тестовая печать Z-отчета</string>
    <string name="test_empty">Тест без позиций</string>
    <string name="main">Главное</string>
</resources>
